--- a/src/apps/frontend/style.css
+++ b/src/apps/frontend/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -42,7 +42,6 @@
   .taskCheckbox:checked ~ .box span {
     @apply opacity-100;
   }
-  
 }
 
 /* Styling for Flatpickr Calendar */
